# tictactoe

./: .gitignore  CMakeLists.txt  Readme.md  tictaccore.c  tictaccore.cpp  tictaccore.h  tt_core.h  ttt_commandline.cpp
src/: qt_main.cpp  tt_cli.h  tt_core.h
